# rules_jsonschema

./: CHANGELOG.md  Cargo.toml  README.md
docs/: BUILD.bazel  RFC-001-codegen-plugin-protocol.md  contract_test.md  go_defs.md  helpers.md  providers.md  rust_defs.md  starlark_defs.md  toolchains.md  write_source_files.md
examples/smoke/: BUILD.bazel  person.json  person_rules.bzl  roundtrip_go_test.go  roundtrip_test.rs
go/: BUILD.bazel  defs.bzl
jsonschema/: BUILD.bazel  contract_test.bzl  plugin_contract.md  providers.bzl  toolchains.bzl
runtime/: BUILD.bazel  helpers.bzl
rust/: BUILD.bazel  defs.bzl
starlark/: BUILD.bazel  defs.bzl
tools/contract_test/: BUILD.bazel
tools/contract_test/src/: main.rs
tools/schema_to_go/: BUILD.bazel  main.go  main_test.go
tools/schema_to_rust/: BUILD.bazel  Cargo.toml
tools/schema_to_rust/src/: main.rs
tools/schema_to_starlark/: BUILD.bazel  Cargo.toml
tools/schema_to_starlark/src/: classifier.rs  emit.rs  main.rs
util/: BUILD.bazel  write_source_files.bzl
