load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//jsonschema:toolchains.bzl", "jsonschema_codegen_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = ["//jsonschema:toolchains_bzl"],
)

# Default Go codegen toolchain.
jsonschema_codegen_toolchain(
    name = "default_go_codegen",
    binary = "//tools/schema_to_go:schema_to_go",
)

toolchain(
    name = "default_go_codegen_toolchain",
    toolchain = ":default_go_codegen",
    toolchain_type = "//jsonschema:go_codegen_toolchain_type",
)
