load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//jsonschema:toolchains.bzl", "jsonschema_codegen_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
)

# Default Starlark codegen toolchain.
jsonschema_codegen_toolchain(
    name = "default_starlark_codegen",
    binary = "//tools/schema_to_starlark:schema_to_starlark",
)

toolchain(
    name = "default_starlark_codegen_toolchain",
    toolchain = ":default_starlark_codegen",
    toolchain_type = "//jsonschema:starlark_codegen_toolchain_type",
)
