load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_jsonschema//jsonschema:contract_test.bzl", "jsonschema_plugin_contract_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "schema_to_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/fastverk/rules_jsonschema/tools/schema_to_go",
)

go_binary(
    name = "schema_to_go",
    embed = [":schema_to_go_lib"],
)

go_test(
    name = "schema_to_go_test",
    srcs = ["main_test.go"],
    embed = [":schema_to_go_lib"],
)

jsonschema_plugin_contract_test(
    name = "schema_to_go_conforms",
    plugin = ":schema_to_go",
)
