[package]
name = "schema-to-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "schema_to_rust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
prettyplease.workspace = true
regress.workspace = true
schemars.workspace = true
# Re-declared with `features` so the `derive` macro is available to
# typify-generated code that consumers later pull in transitively.
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
typify.workspace = true
